--- a/Brazilian_Ecommerce_Analysis.ipynb
+++ b/Brazilian_Ecommerce_Analysis.ipynb
@@ -180,13 +180,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 59,
       "metadata": {
         "id": "-_BEmmkGAeLI",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0dcf0664-9562-4413-e81a-1adc1cc82dc5"
+        "outputId": "25241344-a3ce-46da-f907-661312639306"
       },
       "outputs": [
         {
@@ -286,7 +286,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Q6\n",
+        "#Q6 how many orders per customer?\n",
         "\n",
         "query=\"\"\"\n",
         "Select count(order_status)*1.0/count(distinct customer_unique_id) as 'OpC',\n",
@@ -324,7 +324,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# number of delivered orders\n",
+        "# this cell confirms the number of delivered orders\n",
         "\n",
         "query=\"\"\"\n",
         "select count(order_status)\n",
@@ -350,43 +350,6 @@
           "text": [
             "   count(order_status)\n",
             "0                96478\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "\n",
-        "query = \"\"\"\n",
-        "SELECT\n",
-        "    COUNT(*) * 1.0 / COUNT(DISTINCT c.customer_unique_id) AS OpC,\n",
-        "    COUNT(*) AS delivered_orders,\n",
-        "    COUNT(DISTINCT c.customer_unique_id) AS unique_customers\n",
-        "FROM customers c\n",
-        "JOIN orders o\n",
-        "    ON c.customer_id = o.customer_id\n",
-        "WHERE o.order_status = 'delivered';\n",
-        "\"\"\"\n",
-        "\n",
-        "result = pd.read_sql(query, conn)\n",
-        "print(result)"
-      ],
-      "metadata": {
-        "id": "Cp8pSOWy76rS",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "09d4318d-5ca2-4a26-f47e-7c2bea18fba4"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "       OpC  delivered_orders  unique_customers\n",
-            "0  1.03342             96478             93358\n"
           ]
         }
       ]
@@ -457,9 +420,6 @@
         "Group by customer_city\n",
         "Order by count(customer_city) desc\n",
         "Limit 10\n",
-        "\n",
-        "\n",
-        "\n",
         "\"\"\"\n",
         "\n",
         "result = pd.read_sql(query, conn)\n",
@@ -510,8 +470,6 @@
         "Group by product_category_name\n",
         "Order by sum(payment_value) desc\n",
         "Limit 15;\n",
-        "\n",
-        "\n",
         "\"\"\"\n",
         "\n",
         "result = pd.read_sql(query, conn)\n",
@@ -610,8 +568,6 @@
         "order by avg(review_score) desc\n",
         "limit 10\n",
         "\"\"\"\n",
-        "\n",
-        "\n",
         "result = pd.read_sql(query, conn)\n",
         "print(result)"
       ],
@@ -713,8 +669,7 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "Q14: Average delivery time\n",
+        "#Q14: Average delivery time\n",
         "query = \"\"\"\n",
         "SELECT\n",
         "AVG(julianday(order_delivered_customer_date) - julianday(order_purchase_timestamp)) AS avg_delivery_time\n",
@@ -729,9 +684,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "m23hND_r3Uyy",
-        "outputId": "371aa791-280e-4af9-a904-3abf0a84f104"
+        "outputId": "b5dd734b-a82d-465f-8088-3350a28d87af"
       },
-      "execution_count": 55,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
@@ -804,7 +759,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "13xKQV_0hWXPJrF1LX-YlHPs4iEZxO_Pq",
-      "authorship_tag": "ABX9TyM6DivI7qgMaH2tLviC+5Zm",
+      "authorship_tag": "ABX9TyPX3Bd/7JbtNOhKW2BFgEKR",
       "include_colab_link": true
     },
     "kernelspec": {
