--- a/Brazilian_Ecommerce_Analysis.ipynb
+++ b/Brazilian_Ecommerce_Analysis.ipynb
@@ -20,37 +20,28 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f68ac9b4-97da-44ae-cb40-fbee09a1e8e5"
+        "outputId": "f2b4a962-e0a5-457e-ad94-058b8db02167"
       },
-      "execution_count": 20,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Archive:  /content/drive/MyDrive/archive.zip\n",
-            "  inflating: /content/data/olist_customers_dataset.csv  \n",
-            "  inflating: /content/data/olist_geolocation_dataset.csv  \n",
-            "  inflating: /content/data/olist_order_items_dataset.csv  \n",
-            "  inflating: /content/data/olist_order_payments_dataset.csv  \n",
-            "  inflating: /content/data/olist_order_reviews_dataset.csv  \n",
-            "  inflating: /content/data/olist_orders_dataset.csv  \n",
-            "  inflating: /content/data/olist_products_dataset.csv  \n",
-            "  inflating: /content/data/olist_sellers_dataset.csv  \n",
-            "  inflating: /content/data/product_category_name_translation.csv  \n"
+            "unzip:  cannot find or open /content/drive/MyDrive/archive.zip, /content/drive/MyDrive/archive.zip.zip or /content/drive/MyDrive/archive.zip.ZIP.\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 16,
       "metadata": {
         "id": "K9buVvbBBTKE",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "41bfc15a-b0c0-4fac-a2ad-e9373d351b21"
+        "outputId": "446afac5-fc58-45fd-a585-14980b81cb08"
       },
       "outputs": [
         {
@@ -66,12 +57,12 @@
         "import sqlite3\n",
         "\n",
         "# Load CSVs\n",
-        "orders = pd.read_csv('/content/data/olist_orders_dataset.csv')\n",
-        "customers = pd.read_csv('/content/data/olist_customers_dataset.csv')\n",
-        "payments = pd.read_csv('/content/data/olist_order_payments_dataset.csv')\n",
-        "order_items = pd.read_csv('/content/data/olist_order_items_dataset.csv')\n",
-        "products = pd.read_csv('/content/data/olist_products_dataset.csv')\n",
-        "reviews= pd.read_csv  ('/content/data/olist_order_reviews_dataset.csv')\n",
+        "orders = pd.read_csv('/content/olist_orders_dataset.csv')\n",
+        "customers = pd.read_csv('/content/olist_customers_dataset.csv')\n",
+        "payments = pd.read_csv('/content/olist_order_payments_dataset.csv')\n",
+        "order_items = pd.read_csv('/content/olist_order_items_dataset.csv')\n",
+        "products = pd.read_csv('/content/olist_products_dataset.csv')\n",
+        "reviews= pd.read_csv('/content/olist_order_reviews_dataset.csv')\n",
         "# Create database\n",
         "conn = sqlite3.connect(':memory:')\n",
         "\n",
@@ -88,13 +79,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 17,
       "metadata": {
         "id": "SQvfxa0hRmao",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e3ae2af6-7a33-4fac-d06c-d1c2c6827c2a"
+        "outputId": "f4413ec8-50ad-49f2-fc49-36d1145b2f19"
       },
       "outputs": [
         {
@@ -121,13 +112,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "id": "trNBFa8vWCEh",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0cb1c904-e8b8-454b-ffa6-f3034f2a3e38"
+        "outputId": "06252f86-d854-4dc6-c91b-54e0e67e997d"
       },
       "outputs": [
         {
@@ -180,7 +171,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": null,
       "metadata": {
         "id": "-_BEmmkGAeLI",
         "colab": {
@@ -342,7 +333,7 @@
         },
         "outputId": "240667a7-3288-40e7-ef2c-970b6e05d067"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -384,9 +375,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FoSdPMT5cIPO",
-        "outputId": "3bc2e8db-441a-4907-a2ee-d3f44b141a4b"
+        "outputId": "415dca78-596a-45eb-c5bb-8db466d3b0c1"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -532,7 +523,7 @@
         },
         "outputId": "c4b01e69-ffe5-45a7-81e4-9e8d60a7a1b9"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -578,7 +569,7 @@
         "id": "B-W0m6cyjcqw",
         "outputId": "7cb92b45-2334-48ba-b45a-cdad41953456"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -619,7 +610,7 @@
         "id": "WV03Db09nhPv",
         "outputId": "7580ec72-3e22-45d4-a089-8966c717067a"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -654,7 +645,7 @@
         "id": "V3uCewEFoThC",
         "outputId": "83edf09f-9876-4264-a185-a54a6fdfc3ed"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -686,7 +677,7 @@
         "id": "m23hND_r3Uyy",
         "outputId": "b5dd734b-a82d-465f-8088-3350a28d87af"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -719,7 +710,7 @@
         "id": "5pVo-zvSpWAm",
         "outputId": "a726f3e8-149d-4ad0-fbcb-1e0a0fe3e55f"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -753,13 +744,155 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "# calculate revenue from payments so every order_id has one revenue value.\n",
+        "query = \"\"\"\n",
+        "WITH order_revenue AS (\n",
+        "    SELECT\n",
+        "        order_id,\n",
+        "        SUM(payment_value) AS order_revenue\n",
+        "    FROM payments\n",
+        "    GROUP BY order_id\n",
+        ")\n",
+        "SELECT *\n",
+        "FROM order_revenue;\n",
+        "\"\"\"\n",
+        "result = pd.read_sql(query, conn)\n",
+        "print(result)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-PR5laAA1YU2",
+        "outputId": "8812a344-b79d-446e-ab2c-44ab4414e19d"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                               order_id  order_revenue\n",
+            "0      00010242fe8c5a6d1ba2dd792cb16214          72.19\n",
+            "1      00018f77f2f0320c557190d7a144bdd3         259.83\n",
+            "2      000229ec398224ef6ca0657da4fc703e         216.87\n",
+            "3      00024acbcdf0a6daa1e931b038114c75          25.78\n",
+            "4      00042b26cf59d7ce69dfabb4e55b4fd9         218.04\n",
+            "...                                 ...            ...\n",
+            "99435  fffc94f6ce00a00581880bf54a75a037         343.40\n",
+            "99436  fffcd46ef2263f404302a634eb57f7eb         386.53\n",
+            "99437  fffce4705a9662cd70adb13d4a31832d         116.85\n",
+            "99438  fffe18544ffabc95dfada21779c9644f          64.71\n",
+            "99439  fffe41c64501cc87c801fd61db3f6244          55.79\n",
+            "\n",
+            "[99440 rows x 2 columns]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create and find repeat customers (using customer_unique_id)\n",
+        "\n",
+        "query = \"\"\"\n",
+        "WITH customer_order_counts AS (\n",
+        "    SELECT\n",
+        "        c.customer_unique_id,\n",
+        "        COUNT(o.order_id) AS order_count\n",
+        "    FROM customers c\n",
+        "    JOIN orders o ON c.customer_id = o.customer_id\n",
+        "    GROUP BY c.customer_unique_id\n",
+        ")\n",
+        ", repeat_customers AS (\n",
+        "    SELECT\n",
+        "        customer_unique_id,\n",
+        "        CASE\n",
+        "            WHEN order_count > 1 THEN TRUE\n",
+        "            ELSE FALSE\n",
+        "        END AS is_repeat_customer\n",
+        "    FROM customer_order_counts\n",
+        ")\n",
+        "SELECT *\n",
+        "FROM repeat_customers\n",
+        "ORDER BY is_repeat_customer DESC; -- Added ORDER BY clause\n",
+        "\"\"\"\n",
+        "result = pd.read_sql(query, conn)\n",
+        "print(result)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "91awICKP2xle",
+        "outputId": "e88b2b67-3c09-4571-a1dc-29b63d60f503"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                     customer_unique_id  is_repeat_customer\n",
+            "0      00172711b30d52eea8b313a7f2cced02                   1\n",
+            "1      004288347e5e88a27ded2bb23747066c                   1\n",
+            "2      004b45ec5c64187465168251cd1c9c2f                   1\n",
+            "3      0058f300f57d7b93c477a131a59b36c3                   1\n",
+            "4      00a39521eb40f7012db50455bf083460                   1\n",
+            "...                                 ...                 ...\n",
+            "96091  fffcf5a5ff07b0908bd4e2dbc735a684                   0\n",
+            "96092  fffea47cd6d3cc0a88bd621562a9d061                   0\n",
+            "96093  ffff371b4d645b6ecea244b27531430a                   0\n",
+            "96094  ffff5962728ec6157033ef9805bacc48                   0\n",
+            "96095  ffffd2657e2aad2907e67c3e9daecbeb                   0\n",
+            "\n",
+            "[96096 rows x 2 columns]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Assemble the final one-row-per-order table\n",
+        "\n",
+        "query = \"\"\"\n",
+        "SELECT\n",
+        "    o.order_id,\n",
+        "    o.order_purchase_timestamp,\n",
+        "    o.customer_id,\n",
+        "    c.customer_state,\n",
+        "    r.order_revenue,\n",
+        "    rc.is_repeat_customer\n",
+        "FROM orders o\n",
+        "JOIN customers c\n",
+        "    ON o.customer_id = c.customer_id\n",
+        "JOIN order_revenue r\n",
+        "    ON o.order_id = r.order_id\n",
+        "JOIN repeat_customers rc\n",
+        "    ON o.customer_id = rc.customer_id\n",
+        "WHERE o.order_status = 'delivered';\n",
+        "\"\"\"\n",
+        "result = pd.read_sql(query, conn)\n",
+        "print(result)\n"
+      ],
+      "metadata": {
+        "id": "z3gTESsQ5tsr"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "mount_file_id": "13xKQV_0hWXPJrF1LX-YlHPs4iEZxO_Pq",
-      "authorship_tag": "ABX9TyPX3Bd/7JbtNOhKW2BFgEKR",
+      "mount_file_id": "https://github.com/cmaguire001/Brazilian_Ecommerce_Analysis/blob/main/Brazilian_Ecommerce_Analysis.ipynb",
+      "authorship_tag": "ABX9TyMytZCpHiA0IN4Q0xikOXte",
       "include_colab_link": true
     },
     "kernelspec": {
